# evo-utils

./: .cruft.json  CONTRIBUTING.md  README.md  demo_agents.py  demo_app.py  demo_kanis.py  pyproject.toml
.github/workflows/: deploy-docs.yml  qc.yml
docs/: conf.py  index.rst
src/kani_utils/: __init__.py  base_kanis.py  cli.py  df_agent.py  file_agent.py  kani_streamlit_server.py  kanis.py  streamlit_agent.py  token_counter_agent.py  utils.py
tests/: __init__.py  demo_test.py  genes_descriptions.txt
